--- a/dnscrypt-proxy.toml
+++ b/dnscrypt-proxy.toml
@@ -199,7 +199,7 @@ cert_refresh_delay = 240
 ## This may improve privacy but can also have a significant impact on CPU usage
 ## Only enable if you don't have a lot of network load
 
-dnscrypt_ephemeral_keys = true
+dnscrypt_ephemeral_keys = false
 
 
 ## DoH: Disable TLS session tickets - increases privacy but also latency
